# eventsourcing-dynamodb

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
docker/: docker-compose-scylla.yaml  docker-compose.yaml
eventsourcing_dynamodb/: __init__.py  factory.py  models.py  recorders.py
tests/: test_application.py  test_factory.py
